resolved fdo#67572 export add-in equivalents as internal to .xlsx

For OOXML .xlsx export the add-in functions that are equivalents of
known internal functions as those internal functions.

(cherry picked from commit da7c6092a644dc22f90fb8eef0c4f0df06ec204a)

Minus the DURATION change that was fixed on master (and 4.2) with
62e1a27dc757637223f5f18b1a340ba138e0cb82

Change-Id: Ic41f32b67902effa07c3d4db137be08dc5af7265
Reviewed-on: https://gerrit.libreoffice.org/6530
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>